# app/controllers/api/v1/auths_controller.rb
@@ -1,5 +1,5 @@
 class Api::V1::AuthsController < Api::BaseController
-  skip_before_action :authenticate_api_token!, only: [:create]
+  skip_before_action :authenticate_api_token!
 
   # Requires email and password params
   # Returns an API token for the user if valid
@@ -7,7 +7,16 @@ class Api::V1::AuthsController < Api::BaseController
     if user&.valid_password?(params[:password])
       render json: { token: token_by_name(ApiToken::DEFAULT_NAME) }
     else
-      render json: { error: 'Invalid login' }, status: :unauthorized
+      render_unauthorized
+    end
+  end
+
+  def destroy
+    if user&.valid_password?(params[:password])
+      user.api_tokens.destroy_all
+      head :ok
+    else
+      render_unauthorized
     end
   end
 
@@ -25,4 +34,6 @@ class Api::V1::AuthsController < Api::BaseController
   def token_by_name(name)
     user.api_tokens.find_or_create_by(name: name).token
   end
+
+
 end
